rss-evaluation-manifests/rss-evaluation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss-evaluation-deployment
  namespace: rss-evaluation
  labels:
    app: rss
spec:
  replicas: 1
#  minReadySeconds: 20
  selector:
    matchLabels:
      app: rss
  template:
    metadata:
      labels:
        app: rss
    spec:
      volumes:
      - name: config-rss-evaluation-service
        configMap:
          name: rss-evaluation-fluent-conf
      containers:
      - name: fluentd
        image: grafana/fluent-plugin-loki:latest
        ports:
        - containerPort: 24224
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config-rss-evaluation-service
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
      - name: rss-evaluation
        image: 855430746673.dkr.ecr.us-east-1.amazonaws.com
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
#        livenessProbe:
#          httpGet:
#            path: /actuator/health
#            port: 8080
#          initialDelaySeconds: 3
#          periodSeconds: 3
#          failureThreshold: 5
#        startupProbe:
#          httpGet:
#            path: /actuator/health
#            port: 8080
#          initialDelaySeconds: 15
#          periodSeconds: 3
#          failureThreshold: 5
