rss-evaluation-manifests/rss-evaluation-service-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss-evaluation-canary-deployment
  namespace: rss-evaluation
  labels:
    app: rss-evaluation-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rss-evaluation-service
      track: canary
  template:
    metadata:
      labels:
        app: rss-evaluation-service
        track: canary
    spec:
      containers:
      - name: rss-evaluation-service-canary
        image: 855430746673.dkr.ecr.us-east-1.amazonaws.com/matt-oberlies-sre-p3-rss-evaluation:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
