rss-evaluation-manifests/rss-evaluation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rss-evaluation-service
  namespace: rss-evaluation
spec:
  selector:
    app: rss
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
